[package]
name = "selaura-marketplace-backend"
version = "1.0.0"
edition = "2024"

[dependencies]
axum = "0.7"
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.4"
tower-http = { version = "0.4", features = ["cors"] }